force-app/main/default/objects/nFORCE__Route_Terms__c/nFORCE__Route_Terms__c.object-meta.xml
<CustomObject>
    <description>The Route Terms object is a junction between a UI route and a document which causes the document to be listed for agreement.</description>
    <label>Route Terms</label>
    <nameField>
        <label>Route Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>