force-app/main/default/objects/nFORCE__Route_Terms__c/fields/nFORCE__Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Agreement_Text__c</fullName>
    <description>This text is displayed to the user with a link to a disclosure document, specified by the financial institution.</description>
    <label>Agreement Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>