force-app/main/default/objects/nFORCE__Route_Terms__c/fields/nFORCE__Conditional_Display_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
    <description>This field is manually populated. It is optional. This field uses a Forms Lite expression to specify criteria that must be met for this route to become visible to the user.</description>
    <label>Conditional Display Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>