force-app/main/default/objects/nFORCE__Route_Terms__c/fields/nFORCE__Review_And_Accept_Document__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Review_And_Accept_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox to allow the user to review and accept the document within the route term. By default, it is not enabled.</description>
    <inlineHelpText>Select this checkbox to force the user to review and accept the document within the route term before being allowed to continue.</inlineHelpText>
    <label>Review and Accept Document</label>
    <type>Checkbox</type>
</CustomField>