force-app/main/default/objects/nFORCE__Route_Terms__c/fields/nFORCE__Route__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field maps to a UI route in the retail loan workflow. The selected Salesforce disclosure document is displayed on this route to the user.</description>
    <inlineHelpText>This is the UI route which displays the Salesforce disclosure document.</inlineHelpText>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Route Terms</relationshipLabel>
    <relationshipName>Route_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>